spade-tests/src/snapshots/spade_tests__linear_check__checking_works_with_decld_value.snap
---
source: spade-tests/src/linear_check.rs
---
entity new_mut_wire() -> &mut bool __builtin__
entity consume(p: &mut bool) -> bool __builtin__

entity test() -> bool {
    decl x;
    let _ = inst consume(x);
    let x = inst new_mut_wire();
    let _ = inst consume(x);
    true
}


error: Use of consumed resource
  ┌─ testinput:8:26
  │
6 │     let _ = inst consume(x);
  │                          - Previously used here
7 │     let x = inst new_mut_wire();
8 │     let _ = inst consume(x);
  │                          ^ Use of consumed resource


