spade-tests/src/snapshots/spade_tests__linear_check__double_consumption_of_identifier_in_pipeline_produces_error.snap
---
source: spade-tests/src/linear_check.rs
---
pipeline(0) x(clk: clk, resource: &mut bool) -> (&mut bool, &mut bool) {
    (resource, resource)
}


error: Use of consumed resource
  ┌─ testinput:2:16
  │
2 │     (resource, resource)
  │      --------  ^^^^^^^^ Use of consumed resource
  │      │          
  │      Previously used here


