spade-tests/src/snapshots/spade_tests__linear_check__double_consumption_of_identifier_produces_error_in_array.snap
---
source: spade-tests/src/linear_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of consumed resource
  ┌─ testinput:2:16
  │
2 │     [resource, resource]
  │      --------  ^^^^^^^^ Use of consumed resource
  │      │          
  │      Previously used here


